# vrbkapages

./: .gitignore  Cargo.toml  LICENSE  backend.Dockerfile  deployment.yaml  justfile
.github/workflows/: rust.yml
assembly-compiler/: Cargo.toml
assembly-compiler/src/: ast.rs  chumsky_utils.rs  lib.rs  parser.rs  riscv.pest
assembly-compiler/src/belt/: ast.rs  parser.rs
assembly-compiler/src/belt/parser/: lexer.rs  mod.rs  syntax.rs
assembly-compiler/src/riscv/: ast.rs  parser.rs
assembly-compiler/tests/: parser.rs
assembly-compiler/tests/riscv/: parser.rs
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
belt-interpreter/: Cargo.toml
belt-interpreter/src/: belt.rs  lib.rs  machine.rs
belt-interpreter/tests/: machine.rs
config/: rpxy.toml  sentinel.kdl  sozu.toml
frontend/: Cargo.toml  Trunk.toml  build.sh  index.html  package.json  tailwind.config.js
frontend-assembly/: Cargo.toml  Trunk.toml  build.sh  index.html  package-lock.json  tailwind.config.js
frontend-assembly/src/: app.rs  main.rs  state.rs
frontend-assembly/src/components/: belt_viewer.rs  editor.rs  editor_panel.rs  memory_viewer.rs  mod.rs  state_visualization.rs  status_bar.rs
frontend-assembly/src/context/: editor_context.rs
frontend/src/: app.rs  main.rs
