[workspace]

resolver = "2"

members = [
    "assembly-compiler",
    "backend",
    "belt-interpreter",
    "frontend",
    "frontend-assembly",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"


[workspace.metadata.leptos]
lib-profile-release = "wasm-release"
