[package]
name = "frontend-assembly"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.3", features = ["csr"] }
leptos_router = "0.7.4"
wasm-bindgen = { version = "0.2.100", features = ["serde"] }
web-sys = "0.3.77"
serde_json = "1.0.135"
gloo-utils = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }

reactive_stores = "0.1.5"
itertools = "0.14.0"
assembly-compiler = { path = "../assembly-compiler" }
belt-interpreter = { path = "../belt-interpreter" }
